--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bwip-js": "^4.8.0",
     "console-log-colors": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
